@@ -16,6 +16,12 @@ import java.util.jar.JarFile;
 
 public class CommandInitializer {
 
+    private final ClassLoader classLoader;
+
+    public CommandInitializer(ClassLoader classLoader) {
+        this.classLoader = classLoader;
+    }
+
     public void executeAnnotatedMethod(Class<?> clazz) {
         try {
             Object instance = clazz.getDeclaredConstructor().newInstance();
@@ -44,15 +50,22 @@ public class CommandInitializer {
     private List<Class<?>> getClassesFromJar(String packageName) throws Exception {
         List<Class<?>> classes = new ArrayList<>();
         String path = packageName.replace('.', '/');
-        Enumeration<URL> resources = getClass().getClassLoader().getResources(path);
+        Enumeration<URL> resources = classLoader.getResources(path);
 
         while (resources.hasMoreElements()) {
             URL resource = resources.nextElement();
             String protocol = resource.getProtocol();
 
-            if (protocol.equals("jar")) {
-                String jarPath = resource.getPath().substring(5, resource.getPath().indexOf("!"));
-                JarFile jar = new JarFile(URLDecoder.decode(jarPath, "UTF-8"));
+            if ("jar".equals(protocol)) {
+                String jarPath = resource.getPath();
+                if (jarPath.startsWith("file:")) {
+                    jarPath = jarPath.substring(5);
+                }
+                int bangIndex = jarPath.indexOf('!');
+                if (bangIndex != -1) {
+                    jarPath = jarPath.substring(0, bangIndex);
+                }
+                JarFile jar = new JarFile(URLDecoder.decode(jarPath, StandardCharsets.UTF_8));
 
                 Enumeration<JarEntry> entries = jar.entries();
                 while (entries.hasMoreElements()) {
@@ -60,22 +73,34 @@ public class CommandInitializer {
                     String entryName = entry.getName();
                     if (entryName.startsWith(path) && entryName.endsWith(".class")) {
                         String className = entryName.replace('/', '.').substring(0, entryName.length() - 6);
-                        classes.add(Class.forName(className));
+                        classes.add(Class.forName(className, true, classLoader));
                     }
                 }
                 jar.close();
-            } else if (protocol.equals("file")) {
-                File directory = new File(resource.getFile());
-                if (directory.exists()) {
-                    for (String file : directory.list()) {
-                        if (file.endsWith(".class")) {
-                            String className = packageName + '.' + file.substring(0, file.length() - 6);
-                            classes.add(Class.forName(className));
-                        }
-                    }
+            } else if ("file".equals(protocol)) {
+                File directory = new File(URLDecoder.decode(resource.getFile(), StandardCharsets.UTF_8));
+                if (directory.exists() && directory.isDirectory()) {
+                    findClassesInDirectory(packageName, directory, classes);
                 }
             }
         }
         return classes;
+    }
+
+    private void findClassesInDirectory(String packageName, File directory, List<Class<?>> classes) {
+        File[] files = directory.listFiles();
+        if (files == null) return;
+
+        for (File file : files) {
+            if (file.isDirectory()) {
+                findClassesInDirectory(packageName + "." + file.getName(), file, classes);
+            } else if (file.getName().endsWith(".class")) {
+                String className = packageName + '.' + file.getName().substring(0, file.getName().length() - 6);
+                try {
+                    classes.add(Class.forName(className, true, classLoader));
+                } catch (ClassNotFoundException e) {
+                }
+            }
+        }
     }
 }
